--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.80"
 clap = { version = "4.4.7", features = ["derive"] }
-tokio.workspace = true
+flate2 = "1.0.28"
+reqwest = { version = "0.11.26", features = ["stream"] }
+tar = "0.4.40"
+tokio = { workspace = true, features = ["io-util"] }
+tokio-util = "0.7.10"
