--- a/panel/shared/Cargo.toml
+++ b/panel/shared/Cargo.toml
@@ -4,14 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cfg-if.workspace = true
+http.workspace = true
+icondata = "0.3.0"
 leptos.workspace = true
+leptos_axum = { workspace = true, optional = true }
+leptos_icons = "0.3.0"
 leptos_meta.workspace = true
 leptos_router.workspace = true
-leptos_axum = { workspace = true, optional = true }
-
-http.workspace = true
-cfg-if.workspace = true
+rand = "0.8.5"
+serde = "1.0.197"
 thiserror.workspace = true
+uuid = "1.7.0"
 
 [features]
 default = []
