Store files in database

--- a/panel/server/Cargo.toml
+++ b/panel/server/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 anyhow = "1.0.81"
 axum = { workspace = true, features = ["macros"] }
 beacon-panel-shared = { workspace = true, features = ["ssr"] }
+chrono = "0.4.37"
 dotenvy = "0.15.7"
 futures = "0.3.30"
 leptos = { workspace = true, features = [ "ssr" ]}
 leptos_axum.workspace = true
 log.workspace = true
 simple_logger.workspace = true
-sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
+sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
 tokio = { workspace = true }
 tokio-util = { version = "0.7.10", features = ["io"] }
 tower.workspace = true
