--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,5 +9,5 @@ clap = { version = "4.4.7", features = ["derive"] }
 flate2 = "1.0.28"
 reqwest = { version = "0.11.26", features = ["stream"] }
 tar = "0.4.40"
-tokio = { workspace = true, features = ["io-util"] }
+tokio = { version = "1.33.0", features = ["macros", "io-util"] }
 tokio-util = "0.7.10"
