--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2021"
 anyhow = "1.0.80"
 clap = { version = "4.4.7", features = ["derive"] }
 flate2 = "1.0.28"
-reqwest = { version = "0.11.26", features = ["stream"] }
+home = "0.5.9"
+rcgen = { version = "0.13.1" }
+reqwest = { version = "0.11.26", features = ["stream", "rustls-tls"] }
+rsa = "0.9.6"
+rustls = { version = "0.22.2", features = ["ring"] }
+ssh-key = { git = "https://github.com/AndreasHGK/RustCryptoSSH.git", branch = "patch-0", features = ["rsa"] }
 tar = "0.4.40"
+time = "0.3.36"
 tokio = { version = "1.33.0", features = ["macros", "io-util"] }
 tokio-util = "0.7.10"
