--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: "Publish Containers"
 on:
   push:
     tags:
-      - '*'
+      - "*"
 
 jobs:
   prepare:
@@ -12,13 +12,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v14
+        with:
+          name: beacon
       - id: set-matrix
         name: Generate Matrix
         run: |
           set -Eeu
           matrix="$(nix eval --json ".#lib.$(nix eval --impure --expr "builtins.currentSystem").matrix")"
           echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
-          
+
   publish:
     needs: prepare
     runs-on: ubuntu-latest
@@ -31,17 +36,22 @@ jobs:
       NAMESPACE: ${{ github.repository }}
       TAG: ${{ github.ref_name }}
     steps:
-    - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v25
-    - uses: DeterminateSystems/magic-nix-cache-action@v2
-    - name: Install Skopeo
-      run: sudo apt-get update -y && sudo apt-get install -y skopeo
-    - name: Build Container
-      run: nix build -L ".#${{ matrix.container }}-container"
-    - name: Publish Container
-      run: |
-        # Push with both the 'latest' tag and the tag of the commit.
-        for PUSH_TAG in latest $TAG
-        do
-          skopeo copy --dest-creds "$REGISTRY_USER:$REGISTRY_KEY" "docker-archive://$(readlink result)" "docker://$REGISTRY/${NAMESPACE,,}/${{ matrix.container }}:$PUSH_TAG"
-        done
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v14
+        with:
+          name: beacon
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+      - name: Install Skopeo
+        run: sudo apt-get update -y && sudo apt-get install -y skopeo
+      - name: Build Container
+        run: nix build -L ".#${{ matrix.container }}-container"
+      - name: Publish Container
+        run: |
+          # Push with both the 'latest' tag and the tag of the commit.
+          for PUSH_TAG in latest $TAG
+          do
+            skopeo copy --dest-creds "$REGISTRY_USER:$REGISTRY_KEY" "docker-archive://$(readlink result)" "docker://$REGISTRY/${NAMESPACE,,}/${{ matrix.container }}:$PUSH_TAG"
+          done
