--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,57 +2,5 @@
 resolver = "2"
 members = [
   "cli",
-  "panel",
+  "server",
 ]
-
-# Small release profile for WASM builds.
-[profile.release-small]
-inherits = "release"
-codegen-units = 1
-lto = true
-opt-level = 'z'
-strip = true
-
-# Leptos (frontend) metadata.
-# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
-[[workspace.metadata.leptos]]
-# this name is used for the wasm, js and css file names
-name = "beacon-panel"
-
-# Server-side part of the frontend.
-bin-package = "beacon-panel"
-bin-features = ["ssr"]
-bin-default-features = false
-# Served as WASM to the client.
-lib-package = "beacon-panel"
-lib-features = ["hydrate"]
-lib-default-features = false
-lib-profile-release = "release-small"
-
-# Output settings.
-site-root = "target/site"
-site-pkg-dir = "pkg"
-
-# Tailwind settings.
-tailwind-input-file = "panel/style/main.scss"
-tailwind-config-file = "panel/tailwind.config.js"
-
-# Assets source dir. All files found here will be copied and synchronized to site-root.
-# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
-#
-# Optional. Env: LEPTOS_ASSETS_DIR.
-assets-dir = "panel/assets"
-
-# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
-site-addr = "127.0.0.1:3000"
-# The port to use for automatic reload monitoring
-reload-port = 3001
-
-#  The browserlist query used for optimizing the CSS.
-browserquery = "defaults"
-
-# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
-watch = false
-
-# The environment Leptos will run in, usually either "DEV" or "PROD"
-env = "DEV"
