--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ FILE_STORE_ROOT=".data/files"
 
 # The address to which the backend server should bind to.
 BEACON_SERVER_ADDR=127.0.0.1:4000
+# The URL used by the frontend to prefix requests to the backend.
+API_REQUEST_ROOT=http://localhost:4000
 
 # The url used by a peer to use the web service.
 EXTERNAL_URL=http://localhost:2000
