--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,9 +17,11 @@ rand = "0.8.5"
 serde = "1.0.197"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
 thiserror = "1.0.0"
+time = "0.3.36"
 tokio = { version = "1.33.0", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["io"] }
 tower = { version = "0.4.13", features = ["full"] }
+tower-cookies = "0.10.0"
 tower-http = { version = "0.5", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
