--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.81"
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { version = "0.7.0", features = ["macros"] }
+axum-extra = { version = "0.9.3", features = ["cookie"] }
 cfg-if = "1.0.0"
 chrono = { version = "0.4.37", features = ["serde", "now"], default-features = false }
 dotenvy = "0.15.7"
