--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ http = "1.0.0"
 rand = "0.8.5"
 serde = "1.0.197"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
+ssh-key = { version = "0.6.6", features = ["serde"] }
 thiserror = "1.0.0"
 time = "0.3.36"
 tokio = { version = "1.33.0", features = ["full"] }
