--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2021"
 anyhow = "1.0.80"
 clap = { version = "4.4.7", features = ["derive"] }
 flate2 = "1.0.28"
-reqwest = { version = "0.11.26", features = ["stream"] }
+homedir = "0.2.1"
+rand = "0.8.5"
+reqwest = { version = "0.11.26", features = ["stream", "json", "cookies"] }
+rsa = "0.9.6"
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
+ssh-key = { version = "0.6.6", features = ["serde", "rsa", "ed25519"] }
 tar = "0.4.40"
 tokio = { version = "1.33.0", features = ["macros", "io-util"] }
 tokio-util = "0.7.10"
