--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,9 +15,11 @@ futures = "0.3.30"
 hex = "0.4.3"
 http = "1.0.0"
 rand = "0.8.5"
+rsa = "0.9.6"
 serde = "1.0.197"
+serde_json = "1.0.117"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
-ssh-key = { version = "0.6.6", features = ["serde"] }
+ssh-key = { version = "0.6.6", features = ["encryption", "rsa", "ed25519", "serde"] }
 thiserror = "1.0.0"
 time = "0.3.36"
 tokio = { version = "1.33.0", features = ["full"] }
