--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "1.0.0"
 time = "0.3.36"
 tokio = { version = "1.33.0", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["io"] }
+toml = "0.8.13"
 tower = { version = "0.4.13", features = ["full"] }
 tower-cookies = "0.10.0"
 tower-http = { version = "0.5", features = ["full"] }
