--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,11 +14,12 @@ dotenvy = "0.15.7"
 futures = "0.3.30"
 hex = "0.4.3"
 http = "1.0.0"
+num-traits = "0.2.19"
 rand = "0.8.5"
 rsa = "0.9.6"
 serde = "1.0.197"
 serde_json = "1.0.117"
-sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
+sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "uuid", "bigdecimal"] }
 ssh-key = { version = "0.6.6", features = ["encryption", "rsa", "ed25519", "serde"] }
 thiserror = "1.0.0"
 time = "0.3.36"
