--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -13,7 +13,9 @@ reqwest = { version = "0.11.26", features = ["stream", "json", "cookies"] }
 rsa = "0.9.6"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
+shellexpand = { version = "3.1.0", features = ["full"] }
 ssh-key = { version = "0.6.6", features = ["serde", "rsa", "ed25519"] }
 tar = "0.4.40"
 tokio = { version = "1.33.0", features = ["macros", "io-util"] }
 tokio-util = "0.7.10"
+toml = "0.8.13"
