--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 anyhow = "1.0.80"
 arboard = { version = "3.4.0", features = ["wayland-data-control"] }
 clap = { version = "4.4.7", features = ["derive"] }
+dialoguer = "0.11.0"
 flate2 = "1.0.28"
 homedir = "0.2.1"
+indicatif = "0.17.8"
 rand = "0.8.5"
 reqwest = { version = "0.11.26", features = ["stream", "json", "cookies"] }
 rsa = "0.9.6"
